@@ -198,6 +198,33 @@
     </message>
 </context>
 <context>
+    <name>HtmlMessagesRenderer</name>
+    <message>
+        <source>has joined</source>
+        <translation>wchodzi</translation>
+    </message>
+    <message>
+        <source>has joined priv</source>
+        <translation>dołączył</translation>
+    </message>
+    <message>
+        <source>has left</source>
+        <translation>wychodzi</translation>
+    </message>
+    <message>
+        <source>has left priv</source>
+        <translation>zakończył rozmowę prywatną</translation>
+    </message>
+    <message>
+        <source>has quit</source>
+        <translation>wychodzi z czata</translation>
+    </message>
+    <message>
+        <source>has been kicked</source>
+        <translation>zostaje wyrzucony</translation>
+    </message>
+</context>
+<context>
     <name>Kamerzysta</name>
     <message>
         <source>Error</source>
@@ -2872,40 +2899,8 @@
         <translation>Wyczyść</translation>
     </message>
     <message>
-        <source>Copy</source>
-        <translation>Kopiuj</translation>
-    </message>
-    <message>
-        <source>Select All</source>
-        <translation>Zaznacz wszystko</translation>
-    </message>
-    <message>
         <source>Open link</source>
         <translation>Otwórz w przeglądarce</translation>
-    </message>
-    <message>
-        <source>has joined</source>
-        <translation>wchodzi</translation>
-    </message>
-    <message>
-        <source>has joined priv</source>
-        <translation>dołączył</translation>
-    </message>
-    <message>
-        <source>has left</source>
-        <translation>wychodzi</translation>
-    </message>
-    <message>
-        <source>has left priv</source>
-        <translation>zakończył rozmowę prywatną</translation>
-    </message>
-    <message>
-        <source>has quit</source>
-        <translation>wychodzi z czata</translation>
-    </message>
-    <message>
-        <source>has been kicked</source>
-        <translation>zostaje wyrzucony</translation>
     </message>
 </context>
 <context>
